--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/DDSI_P4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar.jar=jcalendar.jar
 file.reference.ojdbc6.jar=ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.jcalendar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
